--- a/backend/package.json
+++ b/backend/package.json
@@ -1,25 +1,13 @@
 {
-  "name": "backend",
+  "name": "sendemail",
   "version": "1.0.0",
+  "description": "sending emails from Angular through Node.js",
+  "main": "server.js",
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "ejs": "^3.0.1",
+    "emailjs": "^2.2.0",
     "express": "^4.17.1",
-    "googleapis": "^46.0.0",
-    "nodemailer": "^6.4.2",
-    "nodemon": "^2.0.2"
-  },
-  "description": "",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/express": "^4.17.2"
+    "nodemailer": "^6.4.2"
   }
 }
