--- a/ui/package.json
+++ b/ui/package.json
@@ -30,6 +30,7 @@
     "emailjs": "^2.2.0",
     "express": "^4.17.1",
     "hammerjs": "^2.0.8",
+    "ngx-pagination": "^5.0.0",
     "nodemailer": "^6.4.2",
     "rxjs": "^6.5.3",
     "tslib": "^1.9.0",
